--- a/deploy/charts/ray/values.yaml
+++ b/deploy/charts/ray/values.yaml
@@ -15,7 +15,7 @@ podTypes:
     # Since we set headPodType: rayHeadType, the Ray head pod will use the configuration
     # defined in this entry of podTypes:
     rayHeadType:
-        image:
+        image: ""
         # CPU is the number of CPUs used by this pod type.
         # (Used for both requests and limits. Must be an integer, as Ray does not support fractional CPUs.)
         CPU: 1
@@ -45,7 +45,7 @@ podTypes:
 
     # The key for each podType is a user-defined string.
     rayWorkerType:
-        image:
+        image: ""
         # minWorkers is the minimum number of Ray workers of this pod type to keep running.
         minWorkers: 2
         # maxWorkers is the maximum number of Ray workers of this pod type to which Ray will scale.
